--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@remix-run/node": "^2.11.1",
     "@remix-run/react": "^2.11.1",
     "@remix-run/serve": "^2.11.1",
+    "framer-motion": "^11.3.24",
     "isbot": "^5.1.14",
     "react": "19.0.0-rc-2d2cc042-20240809",
     "react-dom": "19.0.0-rc-2d2cc042-20240809"
