--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@remix-run/node": "^2.11.1",
     "@remix-run/react": "^2.11.1",
     "@remix-run/serve": "^2.11.1",
+    "firebase": "^10.13.0",
+    "firebaseui": "^6.1.0",
     "framer-motion": "^11.3.24",
     "isbot": "^5.1.14",
     "react": "19.0.0-rc-2d2cc042-20240809",
